Diagramjusteringar kring behörigheter till gymnasie och högskola med tillhörande text.

--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -352,10 +352,11 @@ Eftersom en gymnasieutbildning förbättrar möjligheten att etablera sig på ar
  gg_gym_hogskola_behorighet$behorighet_gymnasiet_jmf_ar
 
 ```
-<span class = "kommentar">Fler mätpunkter, före 2018</span>
 <br>
 
-Skillnaden i andelen behöriga till gymnasiet hos avgångselever i årskurs 9 mellan inrikes och utrikes födda är fortsatt stor i Dalarna. 2018 låg andelarna för såväl inrikes födda pojkar och flickor omkring 85-90 procent. De har förändrats marginellt fram till 2023. För utrikes födda flickor var andelen behöriga knappt 60 procent 2018 och har ökat till cirka 66 procent 2023. Utrikes födda pojkar har den mest positiva utvecklingen mellan åren, från knappt 48 procent till 68 procent. Det innebär att utrikes födda pojkar har en högre andel behöriga till gymnasiet än utrikes födda flickor år 2023.
+Skillnaden i andelen behöriga till gymnasiet hos avgångselever i årskurs 9 mellan inrikes och utrikes födda är fortsatt stor i Dalarna. Sedan 2005 har gymnasiebehörigheten för inrikes födda minskat från över 90 procent till cirka 85 procent år 2023. Skillnaden mellan inrikes födda pojkar och flickor är marginell och utvecklingen har varit i princip densamma sedan 2005. 
+
+För utrikes födda, både pojkar och flickor har det varit en stor variation under de senaste 20 åren. 2005 var behörigheten för flickor cirka 5 procentenheter lägre än för inrikes födda flickor. För utrikes födda pojkar var skillnaden nästan tre gånger så stor vid samma tidpunkt. Sedan dess har andelen behöriga utrikes födda flickor fallit fram till 2017, för att därefter öka till omkring 66 procent år 2023. För utrikes födda pojkar var minskningen som störst fram till 2011 för att därefter öka från 44 procent till 68 procent. Det innebär att utrikes födda pojkar har en högre andel behöriga till gymnasiet än utrikes födda flickor år 2023, vilket är första gången det senaste decenniet.
 
 I rapporten 2019 studerades avgångseleverna i årskurs 9 i Sverige år 2018 och det var tydligt att andelen behöriga påverkades av migrationsbakgrund. Skillnaderna i andelen behöriga var betydligt mindre mellan elever med utländsk och svensk bakgrund när förutsättningarna var mer likvärdiga. Vid en jämförelse var 91 procent av inrikes födda elever behöriga och 86 procent av inrikes födda elever med utrikes födda föräldrar behöriga, medan 85 procent av de utrikes födda eleverna som invandrat före skolstart var behöriga. Bland utrikes födda elever i riket som invandrat i årskurs 1–5 var andelen behöriga elever däremot märkbart lägre, 67 procent. Allra lägst i riket var behörigheten bland utrikes födda elever som hade invandrat under perioden 2014-2018 (då motsvarande högstadiet) eller saknade svenskt personnummer. Där var andelen behöriga elever 28 procent.
 
@@ -373,7 +374,11 @@ Det finns stora skillnader i gymnasiebehörighet mellan grupper med olika vistel
 
 [Mörtlund (2020)](https://www.ifau.se/Forskning/Publikationer/Rapporter/2020/arbetet-med-nyanlanda-elever-i-grundskolan/){target="_blank"}^[Mörtlund, Tove (2020). Arbetet med nyanlända elever i grundskolan. IFAU Rapport 2020:2.] noterade stora utmaningar i grundskolan att kvalitetssäkra undervisningen, trots instatser kring språk- och kunskapsutvecklande arbetssätt. Att på en kort tid lära sig svenska språket och samtidigt utveckla ämneskunskaper är en svår utmaning.
 
-En annan aspekt som är viktig att mäta är hur stor andel av avgångseleverna i gymnasiet som är behöriga till att påbörja högskolestudier. Diagrammet nedan visar att 2018 var det en högre andel inrikes födda än utrikes födda elever som var behöriga. Skillnaderna var dock betydligt mindre än för avgångseleverna i årskurs 9. 2023 har förhållandet förändrats och andelen behöriga kvinnor är i princip densamma, medan för män är det en högre andel utrikes födda män som är behöriga. Den här utvecklingen stärker vistelsetidens betydelse för integrationen. Oavsett om eleven eller föräldrarna är utrikes eller inrikes födda är kvinnor i högre utsträckning behöriga till att påbörja högskolestudier än män. Något som är viktigt att beakta när detta studeras är att gymnasieskolan inte är obligatorisk, och att de som exempelvis har avbrutit gymnasiestudier eller läser in grundläggande gymnasiebehörighet inte omfattas av diagrammet.
+En annan aspekt som är viktig att mäta är hur stor andel av avgångseleverna i gymnasiet som är behöriga till att påbörja högskolestudier. Diagrammet nedan visar att utvecklingen för inrikes födda är relativt opåverkad fram till 2013, men från 2015 faller andelen behöriga markant. Minskningen är som störst för män, nästan 30 procentenheter. 2023 var andelen högskolebehöriga inrikes födda män under 52 procent. Andelen högskolebehöriga inrikes födda kvinnor har också minskat under perioden, men inte i samma utsträckning. 2023 är cirka 74 procent behöriga.
+
+Skillnaderna mellan inrikes och utrikes födda när det gäller högskolebehörighet är inte lika stora som i fallet med gymnasiebehörighet. Fram till 2013 är skillnaden några procentenheter för både kvinnor och män, men därefter faller andelen utrikes födda män med högskolebehörighet till under 48 procent år 2021. 2023 kan dock observeras en markant förbättring för männen. För kvinnor är inte nedgången alls lika påtaglig, utan liknar mer den för inrikes födda kvinnor. 
+
+2023 är andelen behöriga inrikes och utrikes födda kvinnor i princip densamma, medan för män är det en högre andel utrikes födda män som är behöriga. Den här utvecklingen stärker vistelsetidens betydelse för integrationen. Invandringen från 2015 påverkade behörigheten till högskolan för utrikes född män under ett antal år, men 2023 är nivån likvärdig med inrikes födda män för tio år sedan. Oavsett om eleven eller föräldrarna är utrikes eller inrikes födda är kvinnor i högre utsträckning behöriga till att påbörja högskolestudier än män. 
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
 
